# Warcraft_sdu

./: .gitignore  CMakeLists.txt  README.md  app_win32.rc  main.cpp  main_CLI.cpp  res.qrc  xmake.lua
.github/workflows/: cmake.yml  workflow.yml
doc/: INTRO.md  blog.md  project_report.md
enc_temp_folder/43f16d11ff1977d97a611311625e5e7/: Warrior.cpp
include/: AbstractCity.h  City.h  EventHandler.h  Game.h  GameClock.h  GameIO.h  Headquarter.h  Warrior.h  WarriorFactory.h  Weapon.h  Weaponfactory.h  enums.h
src/: AbstractCity.cpp  City.cpp  EventHandler.cpp  Game.cpp  GameClock.cpp  Headquarter.cpp  Warrior.cpp  Weapon.cpp  gameIO.cpp  gameframe.cpp  gameframe.h  gameframe.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
